Add support for 1.8 upwards